--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ADMINS=5409250383
 BOT_TOKEN=5897357266:AAGQfS1_P6IuFVOk5gNjgrd6nRwUpOEyCBE
 CHANNELS = -1001850949633
-BASE_URL =http://127.0.0.1:8000//api
+BASE_URL =https://gulshoda.up.railway.app//api
 ADVERTISING_CHANNEL = -1001866833350
